RESOLVED FIXED15368
REGRESSION: xsl:import fails when preceded by comment
https://bugs.webkit.org/show_bug.cgi?id=15368
Summary REGRESSION: xsl:import fails when preceded by comment
Sam Sneddon [:gsnedders]
Reported 2007-10-04 07:33:38 PDT
When attempting to load the given IRI with either a locally compiled copy or downloaded nightly of WebKit, all that is shown is a blank white page. From the locally compiled copy I get, "compilation error: file http://www.w3.org/2001/tag/doc/mime-respect line 6 element import xsl:import : unable to load http://www.w3.org/2001/tag/doc/xmlspec.xsl"
Attachments
reduction (2.37 KB, application/zip)
2007-10-05 02:04 PDT, Alexey Proskuryakov
no flags
proposed fix (5.31 KB, patch)
2007-10-06 03:50 PDT, Alexey Proskuryakov
eric: review+
Alexey Proskuryakov
Comment 1 2007-10-04 10:33:24 PDT
I'm not sure what's going on here - could be related to bug 10313.
Alexey Proskuryakov
Comment 2 2007-10-05 01:52:22 PDT
For this site, it's a regression (it sends plain HTML to Tiger Safari/WebKit). Upgrading to P1.
Alexey Proskuryakov
Comment 3 2007-10-05 02:04:43 PDT
Created attachment 16540 [details] reduction
Alexey Proskuryakov
Comment 4 2007-10-05 02:08:34 PDT
Removing the comment before xsl:import fixes the problem: <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0"> <!-- Comment --> <xsl:import href="transform.xsl"/> </xsl:stylesheet>
David Kilzer (:ddkilzer)
Comment 5 2007-10-05 08:56:33 PDT
Alexey Proskuryakov
Comment 6 2007-10-06 03:50:18 PDT
Created attachment 16566 [details] proposed fix XSLStyleSheet::loadChildSheets() is just an evil hack.
Eric Seidel (no email)
Comment 7 2007-10-06 19:31:05 PDT
Comment on attachment 16566 [details] proposed fix The spec seems to support ap's diagnosis: http://www.w3.org/TR/xslt#import r=me
Alexey Proskuryakov
Comment 8 2007-10-07 02:04:33 PDT
Committed revision 26097 (feature branch).
Note You need to log in before you can comment on or make changes to this bug.