        Reviewed by Eric Seidel.

http://bugs.webkit.org/show_bug.cgi?id=15368
        xsl:import fails when preceded by comment

        Test: fast/xsl/import-after-comment.xml

        * xml/XSLStyleSheet.cpp:
        (WebCore::XSLStyleSheet::loadChildSheets): It's OK for xsl:import to be preceded by
        non-element nodes.



Canonical link: https://commits.webkit.org/20501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26511 268f45cc-cd09-0410-ab3c-d52691b4dbfc